Created Product section

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
         font-family: sans-serif;
 }
 
+* {
+        box-sizing: border-box;
+}
+
 .clearfix {
         overflow: auto;
 }
@@ -13,18 +17,28 @@ body {
         margin: 0 auto;
 }
 
+.header-wrapper {
+        background-color: #E6E7E8;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 1;
+}
+
 .header {
-        height: 60px;
+        height: 66px;
 }
 
 .header-logo {
         float: left;
         display: block;
+        padding: 3px 0;
 }
 
 ul.header-nav {
         float: right;
-        padding: 0;
+        padding: 3px 0;
         margin: 0;
         list-style-type: none;
 }
@@ -42,9 +56,64 @@ ul.header-nav > li > a {
         padding: 19px 10px;
 }
 
-.last-button {
-        background-color: orange;
+ul.header-nav > li > a:hover{
+        color: black;
+}
+
+ul.header-nav > li.last-button > a {
+        background-color: #ff6622;
         border: none;
         border-radius: 30px;
-        padding: 0 20px;
+        padding: 11px 35px;
+        color: #fff;
 }
+
+ul.header-nav > li.last-button > a:hover {
+        background-color: black;
+}
+
+.product {
+        background: url("../images/header-background.jpg") center no-repeat;
+        height: 1000px;
+        position: relative;
+        margin-top: 60px;
+        text-align: center;
+}
+
+        .product-title{
+                color: #374848;
+                font-size: 79px;
+                padding-top: 50px;
+        }
+
+        .product-description {
+                color: #8a9095;
+                font-size: 27px;
+                padding: 0 130px;
+                line-height: 44px;
+        }
+
+        .product-cta {
+                color: #fff;
+                text-decoration: none;
+                text-transform: uppercase;
+                font-size: 27px;
+                background-color: green;
+                padding: 20px;
+                border-radius: 30px;
+                margin-top: 40px;
+                display: inline-block;
+        }
+
+        .product-image {
+                position: absolute;
+                width: 290px;
+                height: 328px;
+                bottom: 40px;
+                left: 50%;
+                margin: 0 0 0 -125px;
+        }
+
+        .product-cta:hover{
+                background-color: black;
+        }
