--- a/css/style.css
+++ b/css/style.css
@@ -223,8 +223,9 @@ ul.header-nav > li.last-button > a:hover {
 
         .connect-device {
                 display: inline-block;
-                float: left;
                 width: 33.333333%;
+                position: absolute;
+                left: 40px;
         }
 
         .configure {
@@ -232,13 +233,14 @@ ul.header-nav > li.last-button > a:hover {
                 width: 33.333333%;
                 position: absolute;
                 left: 33%;
-                top: 322px;
+                top: 325px;
         }
 
         .done {
                 display: inline-block;
-                float: right;
                 width: 33.333333%;
+                position: absolute;
+                right: 40px;
         }
 
         .desktop-title {
@@ -250,20 +252,20 @@ ul.header-nav > li.last-button > a:hover {
                 text-align: center;
                 font-size: 17px;
                 color: #8a9095;
-                padding: 0 100px;
+                padding: 0 80px;
         }
         .leftarrow {
                 position: absolute;
-                top: 400px;
-                left: 550px;
+                top: 380px;
+                left: 620px;
                 width: 20px;
                 height: 30px;
         }
 
         .rightarrow {
                 position: absolute;
-                top: 400px;
-                right: 550px;
+                top: 380px;
+                right: 620px;
                 width: 20px;
                 height: 30px;
         }
